pkg/monitoring/testdata/4-service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  labels:
    managed-by: istio-operator
  name: external-service-module-overwrite
  namespace: istio-system
spec:
  hosts:
    - api.trustpilot.com
    - api.google.com
  ports:
    - name: https
      number: 443
      protocol: HTTPS
