pkg/monitoring/testdata/5-service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  labels:
    managed-by: istio-operator
  name: external-service-module-overwrite
  namespace: istio-system
spec:
  hosts:
    - api.trustpilot.com
    - api.google.com
  ports:
    - name: bla
      number: 4439
      protocol: tCp
